Add a discussion about C/C++ compiler options.

--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -13,6 +13,14 @@ set(CMAKE_CXX_STANDARD 20)
 # Omit debugging information.
 set(CMAKE_BUILD_TYPE Release)
 
+#
+# Add compiler options for showing that NaN still work even with `-ffast-math`,
+# provided that the `-ffinite-math-only` option is excluded. Note that the test
+# can also work even with `-ffinite-math-only` with a minor change in the code.
+# See "note-on-cpp.md" for more information.
+#
+add_compile_options(-ffast-math -fno-finite-math-only)
+
 # Create an executable.
 add_executable(NaN-test TestCase.cpp)
 
